refactor: Simplify mock configuration and optimize large content test